# time-report

./: .gitignore  COMMANDS.md  README.md  pyproject.toml  time_report.py
logs/: 2026-02-02_worklog.csv
logs/worklog_csv/: 2026-02-01_worklog.csv  2026-02-03_worklog.csv  2026-02-04_worklog.csv  2026-02-05_worklog.csv  2026-02-06_worklog.csv  2026-02-09_worklog.csv  2026-02-11_worklog.csv
logs/worklog_json/: 2026-02-02_worklog.jsonl  2026-02-03_worklog.jsonl  2026-02-04_worklog.jsonl  2026-02-05_worklog.jsonl  2026-02-06_worklog.jsonl  2026-02-09_worklog.jsonl  2026-02-11_worklog.jsonl
logs/worklog_md/: 2026-02-02_worklog.md  2026-02-03_worklog.md  2026-02-04_worklog.md  2026-02-05_worklog.md  2026-02-06_worklog.md  2026-02-09_worklog.md  2026-02-11_worklog.md
logs/worklog_md/weekly/: 2026-W01_summary.md  2026-W02_summary.md  2026-W03_summary.md  2026-W08_summary.md
src/worklog/: __main__.py  cli.py  clock.py  config.py  domain.py  exporter.py  notifier.py  runner.py  storage.py  ui.py  weekly.py
tests/: test_clock.py  test_storage.py  test_weekly.py
