[project]
name = "worklog"
version = "0.1.0"
description = "Worklog interactivo por intervalos para registrar actividades laborales (Windows + TZ Colombia)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Alidev" }]
dependencies = [
	"rich>=13.9.0",
	"typer>=0.16.0",
	"tzdata>=2025.1",
]

[project.scripts]
worklog = "worklog.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
